moving file directories

--- a/HTML_files/Department.html
+++ b/HTML_files/Department.html
@@ -461,7 +461,7 @@
     
 </style>
     [[
-     (load "SettingOutfilename1.tl")
+     (load "TL/CORE/SettingOutfilename1.tl")
     
     ]]
     <body>
