--- a/HTML_files/Mission.html
+++ b/HTML_files/Mission.html
@@ -546,7 +546,7 @@ line-height: 1px;
                                     ( 
 
                                         (set obj $MP)
-                                        (load "SettingOutfilename.tl")
+                                        (load "TL/CORE/SettingOutfilename.tl")
                                         "(  
                                             
                                             <a href=\"$(file)\" ><li>  $ser </li></a> 
