--- a/HTML_files/security.html
+++ b/HTML_files/security.html
@@ -437,7 +437,7 @@
 
     </head>
     [[
-     (load "SettingOutfilename1.tl")
+     (load "TL/CORE/SettingOutfilename1.tl")
     
     ]]
     <body>
