--- a/HTML_files/server.html
+++ b/HTML_files/server.html
@@ -427,7 +427,7 @@ a{
     </style>
 
     <body>[[
-        (load "SettingOutfilename1.tl")
+        (load "TL/CORE/SettingOutfilename1.tl")
        
        ]]
        <body>
