--- a/HTML_files/vlan.html
+++ b/HTML_files/vlan.html
@@ -416,7 +416,7 @@
         font-size: 16px;
       }
     </style>
-    [[ (load "SettingOutfilename1.tl") ]]
+    [[ (load "TL/CORE/SettingOutfilename1.tl") ]]
     <body>
       <a id="RelatedAnchor" href="$(file)" style="font-size: 0px"
         >Vlan: $(name)</a
