--- a/HTML_files/Division.html
+++ b/HTML_files/Division.html
@@ -450,7 +450,7 @@
     
     </style>
      [[
-     (load "SettingOutfilename1.tl")
+     (load "TL/CORE/SettingOutfilename1.tl")
  
      ]]
      <body>
@@ -500,7 +500,7 @@
                                     ( 
 
                                         (set obj $serv)
-                                        (load "SettingOutfilename.tl")
+                                        (load "TL/CORE/SettingOutfilename.tl")
                                         "(  
                                             
                                             <a href=\"$(file)\" ><li>  $serv </li></a> 
