--- a/HTML_files/application.html
+++ b/HTML_files/application.html
@@ -425,7 +425,7 @@ a{
     
     </style>
     [[
-     (load "SettingOutfilename1.tl")
+     (load "TL/CORE/SettingOutfilename1.tl")
     
     ]]
     <body>
