--- a/HTML_files/cluster.html
+++ b/HTML_files/cluster.html
@@ -467,7 +467,7 @@
     
     </style>
     [[
-    (load "SettingOutfilename1.tl")
+    (load "TL/CORE/SettingOutfilename1.tl")
 
     ]]
     <body>
@@ -512,7 +512,7 @@
                                 ( 
 
                                     (set obj $serv)
-                                    (load "SettingOutfilename.tl")
+                                    (load "TL/CORE/SettingOutfilename.tl")
                                     "( <a href=\"$(file)\" ><li>  $serv </li></a>)"
                                     
                                 )
@@ -533,7 +533,7 @@
                                 (foreach seg $segmentation 
                                 ( 
                                     (set obj $seg)
-                                    (load "SettingOutfilename.tl")
+                                    (load "TL/CORE/SettingOutfilename.tl")
                                     "(<a href=\"$(file)\" ><li>  $seg </li></a>)"   
                                 )
                                 )
