--- a/HTML_files/objective.html
+++ b/HTML_files/objective.html
@@ -459,7 +459,7 @@
     
 </style>
     [[
-     (load "SettingOutfilename1.tl")
+     (load "TL/CORE/SettingOutfilename1.tl")
     
     ]]
     <body>
