--- a/HTML/Sections/BottomBar.html
+++ b/HTML/Sections/BottomBar.html
@@ -17,7 +17,7 @@
                     document.write(new Date().getFullYear());
                 </script>
                 Copyright,
-                <a id="Customer_Home" target="_new"><span id="Customer_Name"></span></a>
+                <a href="$(Customer_Home)" target="_new">$(Customer_Name)</span></a>
             </td>
             <td class="bottom-bar-right">
                 powered by
