--- a/HTML/Sections/VersionInfo.html
+++ b/HTML/Sections/VersionInfo.html
@@ -10,19 +10,19 @@
 		<table height="80%" width="90%" cellspacing="2" cellpadding="5" style="margin-top:-15px; margin:10px;" border="0">
 			<tr>
 				<td class="title" align="left" valign="top" width="116">Component: </td>
-				<td style="font-size:14px" valign="top"><span id="kb-name"></span></td>
+				<td style="font-size:14px" valign="top">$(kb-name)</td>
 			</tr>
 				<tr>
 				<td class="title" align="left" valign="top">Version Number: </td>
-				<td style="font-size:14px" valign="top"><span id="version-number"></span></td>
+				<td style="font-size:14px" valign="top">$(version-number)</td>
 			</tr>
 			<tr>
 				<td class="title" align="left" valign="top">Saved by: </td>
-				<td style="font-size:14px" valign="top"><span id="saved-by"></span></td>
+				<td style="font-size:14px" valign="top">$(saved-by)</td>
 			</tr>
 			<tr>
 				<td class="title" align="left" valign="top">Comments: </td>
-				<td style="font-size:14px" valign="top"><span id="kb-comment"></span></td>
+				<td style="font-size:14px" valign="top">)" (if (not(= $kb-comment $empty)) ("($(kb-comment))")("(No comments)")) "(</td>
 			</tr>
 			<tr valign="bottom" height="100%">
 				<td valign="bottom" colspan="2" align="center">
