--- a/HTML/Sections/Header.html
+++ b/HTML/Sections/Header.html
@@ -1,10 +1,4 @@
-[[
-	(if (isa $obj_me "#DIAGRAM")
-		((set cssStyle "../../Styles/Styles.css"))
-		((set cssStyle "../Styles/Styles.css"))
-	)
-
-"(<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title> $page_title - $date  </title>
@@ -38,5 +32,4 @@
 	</script>
 	<link rel="stylesheet" href=\"$(cssStyle)\" type="text/css">
 	<meta http-equiv=Content-Type content="text/html; charset=utf-8">
-</head>\n)"
-]]
+</head>
