--- a/HTML/TABLES/CapabilityChart.html
+++ b/HTML/TABLES/CapabilityChart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="../js/filter.js"></script>
-
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
       @font-face {
         font-family: Janna-LT;
@@ -66,8 +66,8 @@
       <tbody></tbody>
     </table>
     <script>
+      buildTable("emp-table","CapabilityChart.json");
       getUniqueValuesFromColumn();
     </script>
   </body>
 </html>
-\n
