--- a/HTML/TABLES/DataChart.html
+++ b/HTML/TABLES/DataChart.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="../js/filter.js"></script>
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
       @font-face {
         font-family: Janna-LT;
@@ -71,6 +72,7 @@
       <tbody></tbody>
     </table>
     <script>
+      buildTable("emp-table","DataChart.json");
       getUniqueValuesFromColumn();
     </script>
   </body>
