--- a/HTML/TABLES/MainStrategyChart.html
+++ b/HTML/TABLES/MainStrategyChart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="../js/filter.js"></script>
-
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
       @font-face {
         font-family: Janna-LT;
@@ -64,6 +64,7 @@
       </tbody>
     </table>
     <script>
+      buildTable("emp-table","MainStrategyChart.json");
       getUniqueValuesFromColumn();
     </script>
   </body>
