--- a/HTML/TABLES/ObjectiveChart.html
+++ b/HTML/TABLES/ObjectiveChart.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="../js/filter.js"></script>
+    <script src="../js/jsonbuildtable.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,7 +18,6 @@
       src="https://code.jquery.com/jquery-3.5.1.js"
     ></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="../js/sort.js"></script>
     <style>
       @font-face {
         font-family: Janna-LT;
@@ -92,5 +93,9 @@
       </thead>
       <tbody></tbody>
     </table>
+    <script>
+      buildTable("emp-table","ObjectiveChart.json");
+
+    </script>
   </body>
 </html>
