--- a/HTML/TABLES/SAPchart.html
+++ b/HTML/TABLES/SAPchart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../js/filter.js"></script>
-
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
         @font-face {
             font-family: Janna-LT;
@@ -96,6 +96,7 @@
         </tbody>
     </table>
     <script>
+      buildTable("emp-table","SAPChart.json");
 
         getUniqueValuesFromColumn()
 
