--- a/HTML/TABLES/ServiceChart.html
+++ b/HTML/TABLES/ServiceChart.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../js/filter.js"></script>
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
         @font-face {
             font-family: Janna-LT;
@@ -82,6 +83,7 @@
         <tbody></tbody>
     </table>
     <script>
+      buildTable("emp-table","ServiceChart.json");
 
         getUniqueValuesFromColumn()
 
