--- a/HTML/TABLES/vlanChart.html
+++ b/HTML/TABLES/vlanChart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../js/filter.js"></script>
-
+    <script src="../js/jsonbuildtable.js"></script>
     <style>
         @font-face {
             font-family: Janna-LT;
@@ -82,6 +82,8 @@
         </tbody>
     </table>
     <script>
+      buildTable("emp-table","VlanChart.json");
+
         getUniqueValuesFromColumn()
     </script>
 </body>
