--- a/HTML/INFO/vlan.html
+++ b/HTML/INFO/vlan.html
@@ -416,7 +416,7 @@
         font-size: 16px;
       }
     </style>
-    [[ (load "TL/CORE/SettingOutfilename1.tl") ]]
+    [[ (load "../../../_common_tl/SettingOutfilename1.tl") ]]
     <body>
       <a id="RelatedAnchor" href="$(file)" style="font-size: 0px"
         >Vlan: $(name)</a
@@ -456,7 +456,7 @@
               <div class="row-info">
                 <ul class="wrapper">
                   [[ (set Name $segmentation)(set Report_Flag "1")(set ObjList
-                  "1") (load "TL/CORE/NameOrAnchor.tl") ]]
+                  "1") (load "../../../_common_tl/NameOrAnchor.tl") ]]
                 </ul>
               </div>
             </div>
