--- a/TL/CORE/DiagramFrames.html
+++ b/TL/CORE/DiagramFrames.html
@@ -1,7 +1,7 @@
 <!-- [[ 
 	//// ---------------------------------------------------------------------- 	 
 	//// Purpose: This tl generate the Frame for each diagram in the kbc 
-	//// Loaded by TL/CORE/GenerateDiagram.tl
+	//// Loaded by ../../../_common_tl/GenerateDiagram.tl
 	//// Input variables: diag_file
 	//// Loads: No tl loaded
 	//// ----------------------------------------------------------------------
