--- a/HTML/INFO/application.html
+++ b/HTML/INFO/application.html
@@ -425,7 +425,7 @@ a{
     
     </style>
     [[
-     (load "TL/CORE/SettingOutfilename1.tl")
+     (load "../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
@@ -447,7 +447,7 @@ a{
                             <div class="e2 e1-r2">                               
                                 [[
                                     (set Name $app_owner)(set Report_Flag "1")(set ObjList "0")
-                                    (load "TL/CORE/NameOrAnchor.tl")
+                                    (load "../../../_common_tl/NameOrAnchor.tl")
                                 ]]
                             </div>
                             <div class="e1 sized e1-r1">
