--- a/HTML/INFO/entity.html
+++ b/HTML/INFO/entity.html
@@ -455,7 +455,7 @@
     
     </style>
  [[
- (load "TL/CORE/SettingOutfilename1.tl")
+ (load "../../../_common_tl/SettingOutfilename1.tl")
 
 ]]
 <body>
