--- a/HTML/INFO/security.html
+++ b/HTML/INFO/security.html
@@ -437,7 +437,7 @@
 
     </head>
     [[
-     (load "TL/CORE/SettingOutfilename1.tl")
+     (load "../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
