--- a/HTML/INFO/virtual_server.html
+++ b/HTML/INFO/virtual_server.html
@@ -426,7 +426,7 @@
 
 
 [[
-     (load "TL/CORE/SettingOutfilename1.tl")
+     (load "../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
@@ -453,7 +453,7 @@
                                         [[
 
                                             (set obj $server_hosted)(set Report_Flag "1")(set ObjList "0")
-                                            (load "TL/CORE/NameOrAnchor.tl")
+                                            (load "../../../_common_tl/NameOrAnchor.tl")
                                         ]]
                                     </div>
                                     <div class="title">
