--- a/HTML/INFO/network.html
+++ b/HTML/INFO/network.html
@@ -438,7 +438,7 @@
 
 
 [[
-(load "../../../_common_tl/SettingOutfilename1.tl")
+(load "../../../../_common_tl/SettingOutfilename1.tl")
 
 ]]
 <body>
