--- a/HTML/INFO/services.html
+++ b/HTML/INFO/services.html
@@ -435,7 +435,7 @@ line-height: 1px;
     </style>
 
 [[
-     (load "../../../_common_tl/SettingOutfilename1.tl")
+     (load "../../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
@@ -510,7 +510,7 @@ line-height: 1px;
                                     ( 
 
                                         (set obj $ser)
-                                        (load "../../../_common_tl/SettingOutfilename.tl")
+                                        (load "../../../../_common_tl/SettingOutfilename.tl")
                                         "(  
                                             
                                             <a href=\"$(file)\" ><li>  $ser </li></a> 
