--- a/HTML/INFO/ijra.html
+++ b/HTML/INFO/ijra.html
@@ -426,7 +426,7 @@ line-height: 1px;
     </style>
 
 [[
-(load "../../../_common_tl/SettingOutfilename1.tl")
+(load "../../../../_common_tl/SettingOutfilename1.tl")
 
 ]]
 <body>
