--- a/HTML/INFO/objective.html
+++ b/HTML/INFO/objective.html
@@ -552,7 +552,7 @@
                             <ul class="wrapper">
                                 [[
                                 
-                                    (set Name $Objective_Initiative_func)(set Report_Flag "0")(set ObjList "1")
+                                    (set Name $ObjvReqRealFunc)(set Report_Flag "0")(set ObjList "1")
                                     (load "../../../../_common_tl/NameOrAnchor.tl")
                                 
                                 ]]
