change comon_tl call direectory

--- a/HTML/INFO/Division.html
+++ b/HTML/INFO/Division.html
@@ -450,7 +450,7 @@
     
     </style>
      [[
-     (load "../../../../_common_tl/SettingOutfilename1.tl")
+     (load "_common_tl/SettingOutfilename1.tl")
  
      ]]
      <body>
@@ -500,7 +500,7 @@
                                     ( 
 
                                         (set obj $serv)
-                                        (load "../../../../_common_tl/SettingOutfilename.tl")
+                                        (load "_common_tl/SettingOutfilename.tl")
                                         "(  
                                             
                                             <a href=\"$(file)\" ><li>  $serv </li></a> 
