--- a/HTML/INFO/KPI.html
+++ b/HTML/INFO/KPI.html
@@ -425,7 +425,7 @@ a{
     
     </style>
     [[
-     (load "../../../../_common_tl/SettingOutfilename1.tl")
+     (load "_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
