--- a/HTML/INFO/server.html
+++ b/HTML/INFO/server.html
@@ -427,7 +427,7 @@ a{
     </style>
 
     <body>[[
-        (load "../../../../_common_tl/SettingOutfilename1.tl")
+        (load "_common_tl/SettingOutfilename1.tl")
        
        ]]
        <body>
@@ -502,7 +502,7 @@ a{
                                 (foreach serv $server_hosted
                                     ( 
                                         (set obj $serv)(set Report_Flag "1")(set ObjList "1")
-                                        (load "../../../../_common_tl/NameOrAnchor.tl")
+                                        (load "_common_tl/NameOrAnchor.tl")
                                     )
                                 )
                                 ]]
