--- a/HTML/INFO/Project1.html
+++ b/HTML/INFO/Project1.html
@@ -426,7 +426,7 @@ a{
     
     </style>
     [[
-     (load "_common_tl/SettingOutfilename1.tl")
+     (load "../../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
@@ -448,7 +448,7 @@ a{
                             <div class="e2 e1-r2">                               
                                 [[
                                     (set Name $app_owner)(set Report_Flag "1")(set ObjList "0")
-                                    (load "_common_tl/NameOrAnchor.tl")
+                                    (load "../../../../_common_tl/NameOrAnchor.tl")
                                 ]]
                             </div>
                             <div class="e1 sized e1-r1">
