--- a/HTML/INFO/cluster.html
+++ b/HTML/INFO/cluster.html
@@ -468,7 +468,7 @@
     
     </style>
     [[
-    (load "_common_tl/SettingOutfilename1.tl")
+    (load "../../../../_common_tl/SettingOutfilename1.tl")
 
     ]]
     <body>
@@ -513,7 +513,7 @@
                                 ( 
 
                                     (set obj $serv)
-                                    (load "_common_tl/SettingOutfilename.tl")
+                                    (load "../../../../_common_tl/SettingOutfilename.tl")
                                     "( <a href=\"$(file)\" ><li>  $serv </li></a>)"
                                     
                                 )
@@ -534,7 +534,7 @@
                                 (foreach seg $segmentation 
                                 ( 
                                     (set obj $seg)
-                                    (load "_common_tl/SettingOutfilename.tl")
+                                    (load "../../../../_common_tl/SettingOutfilename.tl")
                                     "(<a href=\"$(file)\" ><li>  $seg </li></a>)"   
                                 )
                                 )
