--- a/HTML/INFO/entity.html
+++ b/HTML/INFO/entity.html
@@ -456,7 +456,7 @@
     
     </style>
  [[
- (load "_common_tl/SettingOutfilename1.tl")
+ (load "../../../../_common_tl/SettingOutfilename1.tl")
 
 ]]
 <body>
