--- a/HTML/INFO/virtual_server.html
+++ b/HTML/INFO/virtual_server.html
@@ -427,7 +427,7 @@
 
 
 [[
-     (load "_common_tl/SettingOutfilename1.tl")
+     (load "../../../../_common_tl/SettingOutfilename1.tl")
     
     ]]
     <body>
@@ -454,7 +454,7 @@
                                         [[
 
                                             (set obj $server_hosted)(set Report_Flag "1")(set ObjList "0")
-                                            (load "_common_tl/NameOrAnchor.tl")
+                                            (load "../../../../_common_tl/NameOrAnchor.tl")
                                         ]]
                                     </div>
                                     <div class="title">
