--- a/HTML/INFO/Mission.html
+++ b/HTML/INFO/Mission.html
@@ -547,7 +547,7 @@ line-height: 1px;
                                     ( 
 
                                         (set obj $MP)
-                                        (load "_common_tl/SettingOutfilename.tl")
+                                        (load "../../../../_common_tl/SettingOutfilename.tl")
                                         "(  
                                             
                                             <a href=\"$(file)\" ><li>  $ser </li></a> 
