--- a/HTML/INFO/data_storage.html
+++ b/HTML/INFO/data_storage.html
@@ -437,7 +437,7 @@
     
     </style>
 [[
-(load "_common_tl/SettingOutfilename1.tl")
+(load "../../../../_common_tl/SettingOutfilename1.tl")
 
 ]] 
 
