--- a/HTML/INFO/Division.html
+++ b/HTML/INFO/Division.html
@@ -499,7 +499,7 @@
                                  [[
                                 (foreach serv $Division_positions
                                     ( 
-
+                                        (localvar obj)
                                         (set obj $serv)
                                         (load "../../../../_common_tl/SettingOutfilename.tl")
                                         "(  
