--- a/HTML/INFO/server.html
+++ b/HTML/INFO/server.html
@@ -502,7 +502,10 @@ a{
                                 [[
                                 (foreach serv $server_hosted
                                     ( 
-                                        (set obj $serv)(set Report_Flag "1")(set ObjList "1")
+                                        (localvar obj)
+                                        (set obj $serv)
+                                        (set Report_Flag "1")
+                                        (set ObjList "1")
                                         (load "../../../../_common_tl/NameOrAnchor.tl")
                                     )
                                 )
