--- a/HTML/INFO/virtual_server.html
+++ b/HTML/INFO/virtual_server.html
@@ -452,8 +452,10 @@
                                     <div class="information">
                                         
                                         [[
-
-                                            (set obj $server_hosted)(set Report_Flag "1")(set ObjList "0")
+                                            (localvar obj)
+                                            (set obj $server_hosted)
+                                            (set Report_Flag "1")
+                                            (set ObjList "0")
                                             (load "../../../../_common_tl/NameOrAnchor.tl")
                                         ]]
                                     </div>
